// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deleteItem A delete an item in state 1`] = `
{
  "issues": undefined,
  "output": {
    "deleted": true,
    "id": "itemA",
  },
  "success": true,
  "typed": true,
}
`;

exports[`formToItem A default itemForm 1`] = `
{
  "barcode": "",
  "box": "",
  "brand": "",
  "category": "",
  "details": "",
  "drawer": "",
  "id": "",
  "location": "",
  "name": "",
  "photo": [],
  "price": undefined,
  "ref-printed": false,
  "reference": "",
  "status": "acheté",
  "updated-on": "",
}
`;

exports[`formToItem B itemForm with some values 1`] = `
{
  "barcode": "",
  "box": "",
  "brand": "",
  "category": "",
  "details": "",
  "drawer": "",
  "id": "",
  "location": "",
  "name": "",
  "photo": [
    {
      "url": "https://photos.org/200/200",
    },
  ],
  "price": 42,
  "ref-printed": false,
  "reference": "",
  "status": "acheté",
  "updated-on": "",
}
`;

exports[`getCommonListsFromItems A 1`] = `
{
  "boxes": [
    "",
    "G (brico & sport)",
  ],
  "categories": [
    "",
    "category B",
  ],
  "drawers": [
    "",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
  ],
  "locations": [
    "",
    "location A",
    "Salon",
  ],
  "statuses": [
    "",
    "à donner",
    "à vendre",
    "acheté",
    "donné",
    "jeté",
    "new surprise status",
    "renvoyé",
    "vendu",
  ],
}
`;

exports[`getOneItem A success result 1`] = `
{
  "barcode": "",
  "box": "box A",
  "brand": "",
  "category": "category A",
  "details": "",
  "drawer": "",
  "id": "rec123",
  "location": "location A",
  "name": "item A",
  "photo": [],
  "price": 0,
  "ref-printed": false,
  "reference": "",
  "status": "acheté",
  "updated-on": "",
}
`;

exports[`itemToForm A mocked item 1`] = `
{
  "columns": 10,
  "errorMessage": "",
  "fields": {
    "barcode": {
      "columns": 4,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Barcode",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,30\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "barcode B",
    },
    "box": {
      "columns": 4,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Box",
      "link": "",
      "options": [],
      "regex": /\\^\\[\\\\p\\{L\\}\\\\s&\\(\\)\\]\\{3,100\\}\\$/u,
      "type": "select",
      "unit": "",
      "value": "G (brico & sport)",
    },
    "brand": {
      "columns": 2,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Brand",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "brand B",
    },
    "category": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Category",
      "link": "",
      "options": [],
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "select",
      "unit": "",
      "value": "category B",
    },
    "details": {
      "columns": 4,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Details",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,200\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "details B",
    },
    "drawer": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Drawer",
      "link": "",
      "options": [
        {
          "label": "",
          "value": "",
        },
        {
          "label": "1",
          "value": "1",
        },
        {
          "label": "2",
          "value": "2",
        },
        {
          "label": "3",
          "value": "3",
        },
        {
          "label": "4",
          "value": "4",
        },
        {
          "label": "5",
          "value": "5",
        },
        {
          "label": "6",
          "value": "6",
        },
        {
          "label": "7",
          "value": "7",
        },
      ],
      "regex": /\\\\d/u,
      "type": "select",
      "unit": "",
      "value": "2",
    },
    "isPrinted": {
      "columns": 1,
      "isRequired": false,
      "isValid": false,
      "isVisible": false,
      "label": "Printed",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "checkbox",
      "unit": "",
      "value": false,
    },
    "location": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Location",
      "link": "",
      "options": [],
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "select",
      "unit": "",
      "value": "Salon",
    },
    "name": {
      "columns": 4,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "Name",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "name B",
    },
    "photo": {
      "columns": 4,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Photo",
      "link": "",
      "regex": /\\^https\\?:\\\\/\\\\/\\\\S\\+\\$/u,
      "type": "text",
      "unit": "",
      "value": "https://picsum.photos/seed/unknown-name/200/200",
    },
    "price": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Price",
      "link": "",
      "regex": /\\^\\\\d\\{1,5\\}\\$/u,
      "type": "text",
      "unit": "€",
      "value": "undefined",
    },
    "reference": {
      "columns": 3,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "Reference",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{3,50\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "reference B",
    },
    "status": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Status",
      "link": "",
      "options": [
        {
          "label": "acheté",
          "value": "acheté",
        },
        {
          "label": "à donner",
          "value": "à donner",
        },
        {
          "label": "à vendre",
          "value": "à vendre",
        },
        {
          "label": "donné",
          "value": "donné",
        },
        {
          "label": "jeté",
          "value": "jeté",
        },
        {
          "label": "renvoyé",
          "value": "renvoyé",
        },
        {
          "label": "vendu",
          "value": "vendu",
        },
      ],
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "select",
      "unit": "",
      "value": "acheté",
    },
  },
  "isTouched": false,
  "isValid": false,
}
`;

exports[`itemToForm C no item 1`] = `
{
  "columns": 10,
  "errorMessage": "",
  "fields": {
    "barcode": {
      "columns": 4,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Barcode",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,30\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "box": {
      "columns": 4,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Box",
      "link": "",
      "options": [],
      "regex": /\\^\\[\\\\p\\{L\\}\\\\s&\\(\\)\\]\\{3,100\\}\\$/u,
      "type": "select",
      "unit": "",
      "value": "",
    },
    "brand": {
      "columns": 2,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Brand",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "category": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Category",
      "link": "",
      "options": [],
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "select",
      "unit": "",
      "value": "",
    },
    "details": {
      "columns": 4,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Details",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,200\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "drawer": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Drawer",
      "link": "",
      "options": [
        {
          "label": "",
          "value": "",
        },
        {
          "label": "1",
          "value": "1",
        },
        {
          "label": "2",
          "value": "2",
        },
        {
          "label": "3",
          "value": "3",
        },
        {
          "label": "4",
          "value": "4",
        },
        {
          "label": "5",
          "value": "5",
        },
        {
          "label": "6",
          "value": "6",
        },
        {
          "label": "7",
          "value": "7",
        },
      ],
      "regex": /\\\\d/u,
      "type": "select",
      "unit": "",
      "value": "",
    },
    "isPrinted": {
      "columns": 1,
      "isRequired": false,
      "isValid": false,
      "isVisible": false,
      "label": "Printed",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "checkbox",
      "unit": "",
      "value": false,
    },
    "location": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Location",
      "link": "",
      "options": [],
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "select",
      "unit": "",
      "value": "",
    },
    "name": {
      "columns": 4,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "Name",
      "link": "",
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "photo": {
      "columns": 4,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Photo",
      "link": "",
      "regex": /\\^https\\?:\\\\/\\\\/\\\\S\\+\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "price": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Price",
      "link": "",
      "regex": /\\^\\\\d\\{1,5\\}\\$/u,
      "type": "text",
      "unit": "€",
      "value": "",
    },
    "reference": {
      "columns": 3,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "Reference",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{3,50\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "status": {
      "columns": 3,
      "isRequired": false,
      "isValid": false,
      "isVisible": true,
      "label": "Status",
      "link": "",
      "options": [
        {
          "label": "acheté",
          "value": "acheté",
        },
        {
          "label": "à donner",
          "value": "à donner",
        },
        {
          "label": "à vendre",
          "value": "à vendre",
        },
        {
          "label": "donné",
          "value": "donné",
        },
        {
          "label": "jeté",
          "value": "jeté",
        },
        {
          "label": "renvoyé",
          "value": "renvoyé",
        },
        {
          "label": "vendu",
          "value": "vendu",
        },
      ],
      "regex": /\\^\\[-,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
      "type": "select",
      "unit": "",
      "value": "acheté",
    },
  },
  "isTouched": false,
  "isValid": false,
}
`;

exports[`pushItem A item with no id should post remotely & push locally 1`] = `
{
  "issues": undefined,
  "output": {
    "createdTime": "",
    "fields": {
      "barcode": "",
      "box": "box A",
      "brand": "",
      "category": "category A",
      "details": "",
      "drawer": "",
      "location": "location A",
      "name": "item A",
      "ref-printed": false,
      "reference": "reference-a",
      "status": "acheté",
      "updated-on": "2022-12-26T15:42:00.000Z",
    },
    "id": "freshly-created",
  },
  "success": true,
  "typed": true,
}
`;

exports[`pushItem A item with no id should post remotely & push locally 3`] = `
{
  "fields": {
    "barcode": "barcode B",
    "box": "G (brico & sport)",
    "brand": "brand B",
    "category": "category B",
    "details": "details B",
    "drawer": "2",
    "location": "Salon",
    "name": "name B",
    "photo": [
      {
        "url": "https://picsum.photos/seed/unknown-name/200/200",
      },
    ],
    "ref-printed": false,
    "reference": "reference B",
    "status": "acheté",
  },
}
`;

exports[`pushItem B item with id should patch remotely & update locally 1`] = `
{
  "issues": undefined,
  "output": {
    "createdTime": "",
    "fields": {
      "barcode": "",
      "box": "box A",
      "brand": "",
      "category": "category A",
      "details": "",
      "drawer": "",
      "location": "location A",
      "name": "item A",
      "ref-printed": false,
      "reference": "reference-a",
      "status": "acheté",
      "updated-on": "2022-12-26T15:42:00.000Z",
    },
    "id": "existing",
  },
  "success": true,
  "typed": true,
}
`;

exports[`pushItem B item with id should patch remotely & update locally 3`] = `
{
  "fields": {
    "details": "new details",
  },
}
`;
